Character cards setup

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <script src="//cdn.polyfill.io/v2/polyfill.min.js"></script>
-    <title>Frontend Boilerplate with React and TypeScript</title>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+    <link rel="icon" href="./images/favicon.png">
+    <title>Track-O</title>
 </head>
 <body>
 <div id="root"></div>
